--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@arcgis/core": "^4.24.7",
 		"@fontsource/fira-mono": "^4.5.0",
 		"cookie": "^0.4.1"
 	}
